fixed showing scrollbar while modal is shown

--- a/Planiranje/Planiranje/Content/Custom.css
+++ b/Planiranje/Planiranje/Content/Custom.css
@@ -1,4 +1,16 @@
-﻿.pointer {
+﻿.modal {
+	overflow-y: auto;
+}
+
+body.modal-open-noscroll {
+	margin-right: 0;
+}
+
+.modal-open-noscroll .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
+	margin-right: 0;
+}
+
+.pointer {
 	cursor : pointer;
 }
 
